@@ -23,13 +23,18 @@ import org.apache.hadoop.hdfs.protocol.ClientProtocol;
 import org.apache.hadoop.security.RefreshUserMappingsProtocol;
 import org.apache.hadoop.security.authorize.RefreshAuthorizationPolicyProtocol;
 import org.apache.hadoop.tools.GetUserMappingsProtocol;
+import org.apache.hadoop.tracing.TraceAdminProtocol;
 
 /**
  * The full set of RPC methods implemented by the Namenode.
  */
 @InterfaceAudience.Private
 public interface NamenodeProtocols
-    extends ClientProtocol, DatanodeProtocol, NamenodeProtocol,
-    RefreshAuthorizationPolicyProtocol, RefreshUserMappingsProtocol,
-    GetUserMappingsProtocol {
+  extends ClientProtocol,
+          DatanodeProtocol,
+          NamenodeProtocol,
+          RefreshAuthorizationPolicyProtocol,
+          RefreshUserMappingsProtocol,
+          GetUserMappingsProtocol,
+          TraceAdminProtocol {
 }
